--- a/package.json
+++ b/package.json
@@ -1,8 +1,21 @@
 {
-  "dependencies": {
-    "sass": "^1.62.1"
+  "devDependencies": {
+    "@babel/core": "^7.22.9",
+    "@babel/preset-env": "^7.22.9",
+    "babel-loader": "^9.1.3",
+    "css-loader": "^7.1.2",
+    "deepl-node": "^1.24.0",
+    "mini-css-extract-plugin": "^2.9.4",
+    "sass": "^1.97.1",
+    "sass-loader": "^16.0.6",
+    "scss": "^0.2.4",
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4"
   },
   "scripts": {
-    "translate": "node translate-all.js"
+    "translate": "node translate-all.js",
+    "init": "npm install && node init-project.js && npx webpack --config webpack.config.js --watch",
+    "create": "node createApp.js",
+    "watch": "npx webpack --config webpack.config.js --watch"
   }
 }
